grammar.js
    script: $ => repeat($._top_level),

    _top_level: $ => choice(
      $.block,
      $._statement,
      $._filler_line
    ),

    command_expression: $ => seq(
      optional(/(::)?B::/),
      choice(
        seq(
          $._var_command,
          $._terminator
        ),
        seq(
          $._host_command,
          $._terminator
        ),
        seq(
          $._other_command,
          $._terminator
        )
      )
    ),

    _host_command: $ => seq(
      field('command', alias($._host_command_with_default_format, $.identifier)),
      repeat1($._blank),
      field('arguments', alias($._host_command_argument_list_default_format, $.argument_list))
    ),

    _other_command: $ => seq(
      field('command', alias($._command_identifier, $.identifier)),
      optional(seq(
        repeat1($._blank),
        field('arguments', optional(alias($._command_arguments, $.argument_list))),
      ))
    ),

    _option_value: $ => prec(PREC.option_value, choice(
      $.binary_expression,
      $.call_expression,
      $.identifier,
      $.macro,
      $.macro_text_expansion,
      $.unary_expression,
      $._literal
    )),

    _parenthesized_option_value: $ => seq(
      '(',
      $._option_value,
      ')'
    ),

    option_expression: $ => prec(PREC.option, seq(
      '/',
      field('option', $.identifier),
      optional(seq(
        repeat1($._blank),
        field('value', choice(
          $._option_value,
          $._parenthesized_option_value
        ))
      ))
    )),

    format_expression: $ => seq(
      '%',
      field('value', choice(
        $.identifier,
        $.macro,
        $.macro_text_expansion
      )),
      repeat(seq(
        '.',
        field('value', choice(
          $.identifier,
          $.macro,
          $.macro_text_expansion
        ))
      ))
    ),

    call_expression: $ => prec(PREC.call, choice(
      $._hll_var_call_expression,
      seq(
        field('function', choice(
          $._expression,
          alias($._function_identifier, $.identifier)
        )),
        field('arguments', $.argument_list)
      )
    )),

    _function_identifier: $ => seq(
      alias($.identifier, 'function'),
      repeat(seq(
        '.',
        alias($.identifier, 'subfunction')
      ))
    ),

    argument_list: $ => seq(
      '(',
      optional(seq(
        $._expression,
        repeat(seq(
          repeat($._blank),
          ',',
          repeat($._blank),
          $._expression
        ))
      )),
      ')'
    ),


    /*****************************************
     * PRACTICE commands with HLL expressions
     *****************************************/

    _var_command: $ => choice(
      $._hll_var_command,
      $._hll_var_definition_command,
      $._non_hll_var_command
    ),

    _hll_var_call_expression: $ => seq(
      field('function', alias($._hll_var_call_expression_function, $.identifier)),
      field('arguments', alias($.hll_var_call_expression_argument_list, $.argument_list))
    ),

    hll_type_pattern: $ => seq(
      repeat1(choice(
        alias($.identifier, 'type'),
        '?',
        '*'
      ))
    ),

    _hll_expression: $ => choice(
      $._hll_number_literal,
      $.hll_assignment_expression,
      $.hll_binary_expression,
      $.hll_conditional_expression,
      $.hll_unary_expression,
      $.hll_update_expression,
      $.hll_cast_expression,
      $.hll_pointer_expression,
      $.hll_sizeof_expression,
      $.hll_subscript_expression,
      $.hll_call_expression,
      $.hll_field_expression,
      $.hll_string_literal,
      $.hll_char_literal,
      $.hll_parenthesized_expression,
      $.identifier,
      $.symbol
    ),

    // TRACE32 does not allow any spaces between function name
    // and opening parens
    hll_call_expression: $ => prec(PREC.call, seq(
      field('function', $._hll_expression),
      field('arguments', $.hll_argument_list)
    )),

    // TRACE32 does not allow any spaces between name of the struct
    // variable and field name
    hll_field_expression: $ => seq(
      prec(PREC.field, seq(
        field('argument', $._hll_expression),
        field('operator', choice(
          '.',
          '->'
        ))
      )),
      field('field', $._hll_field_identifier)
    ),

    // TRACE32 does neither allow any spaces between array name
    // and opening bracket nor index and brackets
    hll_subscript_expression: $ => prec(PREC.subscript, seq(
      field('argument', $._hll_expression),
      '[',
      field('index', choice(
        $._hll_expression,
        $.hll_range_expression
      )),
      ']'
    )),

    // TRACE32 does not allow any spaces after the closing
    // parens
    hll_cast_expression: $ => prec(PREC.cast, seq(
      '(',
      repeat($._blank),
      field('type', $.hll_type_descriptor),
      repeat($._blank),
      ')',
      field('value', $._hll_expression)
    )),

    // TRACE32 does not allow any spaces between sizeof keyword
    // and opening parens
    hll_pointer_expression: $ => prec.left(PREC.cast, seq(
      field('operator', choice(
        '*',
        '&'
      )),
      field('argument', $._hll_expression)
    )),

    // TRACE32 does not allow any spaces between the
    // different parts of the expressions
    hll_update_expression: $ => {
      const argument = field('argument', $._hll_expression)
      const operator = field('operator', choice('--', '++'))

      return prec.right(PREC.unary, choice(
        seq(
          operator,
          argument
        ),
        seq(
          argument,
          operator
        )
      ));
    },

    // TRACE32 does not allow any spaces between expression and operator
    hll_unary_expression: $ => prec.left(PREC.unary, seq(
      field('operator', choice(
        '!',
        '~',
        '-',
        '+'
      )),
      field('argument', $._hll_expression)
    )),

    // TRACE32 does not allow any spaces between expressions and operator
    // on top level.
    hll_binary_expression: $ => {
      const table = [
        ['+', PREC.add_sub],
        ['-', PREC.add_sub],
        ['*', PREC.mul_div_mod],
        ['/', PREC.mul_div_mod],
        ['%', PREC.mul_div_mod],
        ['||', PREC.logical_or],
        ['&&', PREC.logical_and],
        ['|', PREC.bitwise_or],
        ['^', PREC.bitwise_xor],
        ['&', PREC.bitwise_and],
        ['==', PREC.equal],
        ['!=', PREC.equal],
        ['>', PREC.relational],
        ['>=', PREC.relational],
        ['<=', PREC.relational],
        ['<', PREC.relational],
        ['<<', PREC.shift],
        ['>>', PREC.shift]
      ]

      return choice(...table.map(([operator, precedence]) => {
        return prec.left(precedence, seq(
          field('left', $._hll_expression),
          field('operator', operator),
          field('right', $._hll_expression)
        ))
      }));
    },

    // TRACE32 does not allow any spaces between expressions and operator
    hll_range_expression: $ => prec.left(PREC.range, seq(
        field('left', $._hll_expression),
        repeat($._blank),
        field('operator', '..'),
        repeat($._blank),
        field('right', $._hll_expression)
    )),

    hll_assignment_expression: $ => prec.right(seq(
      field('left', $._hll_assignment_left_expression),
      repeat($._blank),
      field('operator', choice(
        '=',
        '*=',
        '/=',
        '%=',
        '+=',
        '-=',
        '<<=',
        '>>=',
        '&=',
        '^=',
        '|='
      )),
      repeat($._blank),
      field('right', $._hll_expression)
    )),

    _hll_assignment_left_expression: $ => choice(
      $.identifier,
      $.hll_call_expression,
      $.hll_field_expression,
      $.hll_pointer_expression,
      $.hll_subscript_expression,
      $.hll_parenthesized_expression,
      $.symbol,
    ),

    // TRACE32 does not allow any spaces between the ternary
    // operators
    hll_conditional_expression: $ => prec.right(seq(
      field('condition', $._hll_expression),
      '?',
      field('consequence', optional(seq(
        $._hll_expression,
      ))),
      ':',
      field('alternative', $._hll_expression)
    )),

    hll_char_literal: $ => seq(
      choice('L\'', 'u\'', 'U\'', 'u8\'', '\''),
      choice(
        $.hll_escape_sequence,
        alias(/[^\n']/, $.character),
      ),
      '\''
    ),

    hll_string_literal: $ => seq(
      choice('L"', 'u"', 'U"', 'u8"', '"'),
      repeat(choice(
        prec(1, /[^\\"\n]+/),
        $.hll_escape_sequence
      )),
      '"',
    ),

    hll_parenthesized_expression: $ => seq(
      '(',
      repeat($._blank),
      choice(
        $._hll_expression,
        $.hll_comma_expression
      ),
      repeat($._blank),
      ')'
    ),

    hll_type_descriptor: $ => seq(
      repeat($.hll_type_qualifier),
      repeat($._blank),
      field('type', $._hll_type_specifier),
      repeat(seq(
        repeat($._blank),
        $.hll_type_qualifier
      )),
      optional(seq(
        repeat($._blank),
        field('declarator', $._hll_abstract_declarator)
      ))
    ),

    hll_type_qualifier: $ => choice(
      'const',
      'volatile'
    ),

    _hll_type_specifier: $ => choice(
      $._hll_type_identifier,
      $.hll_union_specifier,
      $.hll_struct_specifier,
      $.hll_enum_specifier,
      $.hll_primitive_type,
      $.hll_sized_type_specifier
    ),

    hll_struct_specifier: $ => seq(
      'struct',
      repeat1($._blank),
      field('name', $._hll_type_identifier)
    ),

    hll_union_specifier: $ => seq(
      'union',
      repeat1($._blank),
      field('name', $._hll_type_identifier)
    ),

    hll_enum_specifier: $ => seq(
      'enum',
      repeat1($._blank),
      field('name', $._hll_type_identifier)
    ),

    hll_sized_type_specifier: $ => choice(
      seq(
        repeat1(
          seq(
            choice(
            'signed',
            'unsigned',
            'long',
            'short'
            ),
            repeat1($._blank)
          )
        ),
        field('type', $._hll_type_identifier)
      ),
      seq(
        repeat(seq(
          choice(
          'signed',
          'unsigned',
          'long',
          'short'
          ),
          repeat1($._blank)
        )),
        seq(
          choice(
          'signed',
          'unsigned',
          'long',
          'short'
          )
        )
      )
    ),

    hll_primitive_type: $ => token(choice(
      'bool',
      'char',
      'int',
      'float',
      'double',
      'void',
      'size_t',
      'ssize_t',
      'intptr_t',
      'uintptr_t',
      'charptr_t',
      ...[8, 16, 32, 64].map(n => `int${n}_t`),
      ...[8, 16, 32, 64].map(n => `uint${n}_t`),
      ...[8, 16, 32, 64].map(n => `char${n}_t`)
    )),

    hll_declaration: $ => seq(
      $._hll_declaration_specifiers,
      repeat($._blank),
      field('declarator', $._hll_declarator)
    ),

    _hll_declaration_specifiers: $ => seq(
      repeat(seq(
        $._hll_declaration_modifiers,
        repeat1($._blank)
      )),
      field('type', $._hll_type_specifier),
      repeat(seq(
        repeat1($._blank),
        $._hll_declaration_modifiers
      ))
    ),

    _hll_declarator: $ => choice(
      $.hll_pointer_declarator,
      $.hll_function_declarator,
      $.hll_array_declarator,
      $.hll_parenthesized_declarator,
      $.symbol
    ),

    hll_pointer_declarator: $ => prec.right(seq(
      $._hll_pointer_declarator_specifier,
      repeat($._blank),
      field('declarator', $._hll_declarator)
    )),

    hll_array_declarator: $ => prec.right(PREC.declarator, seq(
      '[',
      repeat(seq(
        repeat($._blank),
        $.hll_type_qualifier
      )),
      field('size', optional(seq(
        repeat($._blank),
        choice(
          $._hll_expression,
          '*'
        )
      ))),
      repeat($._blank),
      ']',
      repeat($._blank),
      field('declarator', $._hll_declarator)
    )),

    _hll_pointer_declarator_specifier: $ => seq(
      '*',
      optional(seq(
        repeat($._blank),
        seq(
          repeat(seq(
            $.hll_type_qualifier,
            repeat($._blank)
          )),
          $.hll_type_qualifier
        )
      ))
    ),

    _hll_abstract_declarator: $ => choice(
      $.hll_abstract_pointer_declarator,
      $.hll_abstract_function_declarator,
      $.hll_abstract_array_declarator,
      $.hll_abstract_parenthesized_declarator
    ),

    hll_abstract_pointer_declarator: $ => prec.right(seq(
      $._hll_pointer_declarator_specifier,
      repeat($._blank),
      field('declarator', optional($._hll_abstract_declarator))
    )),

    hll_argument_list: $ => seq(
      '(',
      repeat($._blank),
      optional(seq(
        $._hll_expression,
        repeat($._blank),
        repeat(seq(
          ',',
          repeat($._blank),
          $._hll_expression,
          repeat($._blank),
        ))
      )),
      ')'
    ),

    hll_escape_sequence: $ => token(prec(PREC.escape_sequence, seq(
      '\\',
      choice(
        /[^xuU]/,
        /\d{2,3}/,
        /x[0-9a-fA-F]{2,}/,
        /u[0-9a-fA-F]{4}/,
        /U[0-9a-fA-F]{8}/
      )
    ))),

    _hll_type_identifier: $ => alias($.identifier, $.hll_type_identifier),
    _hll_field_identifier: $ => alias($.identifier, $.hll_field_identifier),

    integer: $ => choice(
      ...RE_BIN_HEX_NUMBER,
      seq(
        $._decimal_number_pre_hook,
        $._decimal_number
      )
    ),

    string: $ => seq(
      '"',
      repeat(choice(
        /[^"&]+/,
        /""/,  // Escape sequence
        $._ampersand_char,
        $.macro,
      )),
      '"'
    ),

    character: $ => seq(
      "'",
      choice(
        /\\[^'\n]/,
        /[^\n]/,
      ),
      "'"
    ),

    _line_specifier: $ => token(choice(
      /\\[0-9]+(\\[0-9]+)?/,
      /\\[0-9]+\\[0-9]*\\[0-9]+/
    )),

    // Symbol names may omit earlier segments. After the first included segments
    // all later ones must be included. However, they may contain only the
    // separator.
    // Module names with single backslash are handled as internal C-style variables.
    // During parsing there is no way to differentiate. We reuse the token for
    // TRACE32 internal HLL variables to make the conflict obvious for the
    // generator.
    // The naming requirements for machine, program and module names are less strict
    // than those for function or method names.
    file_handle: $ => seq(
      '#',
      prec.right(repeat1(choice(
        /[0-9]+/,
        $.macro
      )))
    ),

    _expression: $ => choice(
      $.assignment_expression,
      $.binary_expression,
      $.call_expression,
      $.identifier,
      $.unary_expression,
      $.macro,
      $.macro_text_expansion,
      $._literal,
      $._parenthesized_expression,
      $._path_expression
    ),

    identifier: $ => /[0-9]*[A-Za-z_]\w*/,

    _terminator: $ => choice(
      $.comment,
      $._blank_line
    ),

    _blank: $ => /[ \t]/,
  }
})

function longAndShortForm(keyword, aliasAsWord = true) {
  // Capture short form: RePeaT -> [rR][pP][tT]
  const short = keyword
    .split('')
    .map(l => l === l.toUpperCase() ? `[${l.toLowerCase()}${l}]` : '')
    .join('')

  // Capture long form: RePeaT -> [rR][eE][pP][eE][aA][tT]
  const long = keyword
    .split('')
    .map(l => `[${l.toLowerCase()}${l.toUpperCase()}]`)
    .join('')

  let result = new RegExp([short, long].join('|'))
  if (!short || short === long) {
    result = new RegExp(long)
  }

  if (aliasAsWord) {
    result = alias(result, keyword)
  }
  return result
}
